# automated-test-one-stop-services

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .kiroignore  .markdownlint-cli2.jsonc  LICENSE  NOTICE  Taskfile.yml  biome.json  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  readme.md  tsconfig.json
.github/workflows/: ci.yml
config/: biome-tools.json  pipeline.static.json  tool-registry.json
hub/: README.md  ecosystem.config.cjs  package.json
hub/.run/: .gitignore
hub/client/: index.html  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts  vitest.config.ts  vitest.setup.ts
hub/server/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
hub/shared/: package.json  tsconfig.json
scripts/: .env.template  create-project.ts  install-tool.ts  release.mjs  runner.ts  sync-projects.ts
scripts/__tests__/: eval-test-quality.spec.mjs  install-provisioning-smoke.spec.mjs  move-path.spec.mjs  setup-bootstrap-integration.spec.mjs
scripts/eval/: test-quality.mjs
scripts/install-core/: effects.ts  index.ts  invocation.ts  pipeline.ts  provision.ts  tsconfig.json  validation.ts  vitest.config.ts
scripts/lib/: current-user.mjs  list-git-dirs.mjs  move-path.mjs  prune-empty-dirs.mjs  rm-matching-dirs.mjs  usage-log.mjs
scripts/manifests/: compose-gen.ts  discover.ts  fs-helpers.ts  index.ts  overrides.ts  pipeline-projection.ts  runner-command.ts  runner-step-render.ts  setup-planner.ts  tsconfig-gen.ts  tsconfig.json  types.ts  validate.ts  vitest.config.ts
scripts/setup/: automated-test-one-stop-service_installer_mac-and-linux.sh  automated-test-one-stop-service_installer_windows.bat  set-android-home.sh  setup-linux.sh  setup-state.mjs  setup-windows.bat  versions.env
tools/tool-template-example/: .gitattributes  .gitignore  Dockerfile  README.md  Taskfile.yml  package.json  (+2 more)
(+281 files in other folders)
